--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
         margin-left: 50px;
     }
     
-    .button {
+    .buttondiv {
         display: block;
         padding-left: 350px;
         padding-right: 90px;
@@ -239,6 +239,19 @@ body {
         align-items: left;
       }
     
+      .viewPaletteHover {
+        background-color: #e2e2d7;
+        border: none;
+        color: white;
+        padding: 5px 5px;
+        font-size: 15px;
+        text-align: center;
+        text-decoration: none;
+        margin: 4px 2px;
+        cursor: pointer;
+        display: grid;
+        align-items: left;
+      }
     .viewNueTravel {
         display: grid;
         background-color: #B8B8AB;
@@ -267,7 +280,18 @@ body {
         cursor: pointer;
         align-items: left;
       }
-    
+    .buttonmain {
+        border: none;
+        font-size: 15px;
+        text-decoration: none;
+        cursor: pointer;
+        align-items: left;
+        justify-content: left;
+        color: white;
+        background-color: #B8B8AB;
+    }
+
+
     h8 {
         font-weight: bold;
         padding-bottom: 15px;
