--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body {
         display: block;
         margin-left: 300px;
         margin-right: 400px;
+        margin-bottom: 20px;
     }
     .center {
         display: block;
